--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 p, table, ul {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 h1 {
@@ -71,7 +71,12 @@ p, h1, h2, h3, li {
 }
 
 ul {
-  list-style-position: inside;
+  padding-left: 1.5em;
+  list-style-position: outside;
+}
+
+ul li {
+  margin-bottom: 7px;
 }
 
 .hscroll {
@@ -83,16 +88,25 @@ ul {
   padding: 1em;
 }
 
+.posttitle {
+  margin-top: 15px;
+}
+
 /* GENERAL NAVIGATION STYLING */
 #navbar {
   padding: 15px;
   list-style-type: none;
   transition: all .5s;
+  margin: 0px;
 }
 
 #logo a img {
   width: 200px;
   text-decoration: none;
+}
+
+#navbar li {
+  margin-bottom: 0px;
 }
 
 .navitem a {
