--- a/css/styles.css
+++ b/css/styles.css
@@ -197,3 +197,13 @@ ul li {
     display: none;
   }
 }
+
+.map-container {
+  position: relative;
+}
+
+.map-container iframe {
+  width: 100%;
+  max-width: 600px;
+  height: 300px;
+}
